# neutrix

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/rules/: prd-compare-with-claude.md  release-workflow.md  visibility-parity.md
docs/: architecture.html  roadmap.html
docs/PRDs/: README.md  v0.10.0-subagent.md  v0.10.0-tuiview-purify.md  v0.10.1-streaming-steer.md  v0.10.2-visibility-parity.md  v0.10.3-tuiview-purify.md  v0.10.4-smart-advisor.md  v0.10.5-compaction.md  v0.11.0-smart-advisor.md  v0.2.0-yaml-config.md  v0.3.0-onboarding-tui.md  v0.3.1-onboarding-arrow-nav.md  v0.4.0-onboard-slash-command.md  v0.4.1-onboard-arrow-nav-fix.md  v0.4.2-deepseek-model-names.md  v0.5.0-onboard-polish.md  v0.5.1-onboard-row-and-quit.md  v0.5.2-onboard-state-and-focus.md  v0.5.3-onboard-key-edit-semantics.md  v0.5.4-onboard-enter-race-fix.md  v0.5.5-onboard-key-mask-after-enter.md  v0.6.0-main-chat-polish.md  v0.6.1-onboard-key-submit-isolation.md  v0.6.2-main-visible-block-list.md  v0.6.3-main-onion-blocks.md  v0.6.4-main-chat-compact-draft.md  v0.8.0-tasks.md  (+47 more)
tests/: conftest.py  fake_view.py  test_advisor.py  test_agent_loop.py  test_ask_user_question.py  test_compaction.py  test_context_files.py  test_context_manager.py  test_context_manager_timeout.py  test_controller.py  test_cost_ledger.py  test_draft_recall_bindings.py  test_executor.py  test_fake_view.py  test_goal_loop.py  test_heartbeat_format.py  test_heartbeat_ticker.py  test_llm.py  test_onboard.py  test_permissions.py  test_pricing.py  test_prompts.py  test_rewind.py  test_session_store.py  test_skills.py  test_slot_config.py  test_smoke.py  test_store.py  test_subagent.py  test_terminal_chat.py  test_tools.py  test_transcript.py  test_tui.py  test_visibility_parity.py
(+58 files in other folders)
